--- a/landing/index.html
+++ b/landing/index.html
@@ -21,27 +21,30 @@
             </h2>
         </section>
         <section id="courses" class="cf">
-            <div id="course-rails" class="course">
+            <div id="course-rails" class="course col-md-4">
                 <h3 class="course-logo">One Month
                     <span class="course-type">Rails</span>
                 </h3>
                 <p class="course-description">Build your first web app in just one month. Pants optional.</p>
                 <a href="#" class="course-btn">LEARN MORE</a>
             </div>
-            <div id="course-html" class="course">
+            <div id="course-html" class="course col-md-4">
                 <h3 class="course-logo">One Month
                     <span class="course-type">HTML</span>
                 </h3>
                 <p class="course-description">Learn HTML & CSS in just one month. Build explosive websites.</p>
                 <a href="#" class="course-btn">LEARN MORE</a>
             </div>
-            <div id="course-growth" class="course">
+            <div id="course-growth" class="course col-md-4">
                 <h3 class="course-logo">One Month
                     <span class="course-type">Growth Hacking</span>
                 </h3>
                 <p class="course-description">Get your million-dolllar idea off the ground in just one month. Million-dollar budget not required.</p>
                 <a href="#" class="course-btn">LEARN MORE</a>
             </div>
+        </section>
+        <section id="footer">
+            <p class="legal"><a href="#" target="_blank">PRIVACY POLICY</a> • MADE IN NYC ©2013–14 ONE MONTH</p>
         </section>
     </div>
 
