--- a/landing/index.html
+++ b/landing/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>One Month</title>
     <!--[if IE]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,27 +17,30 @@
         <section id="landing-header" class="cf">
             <h1 class="site-logo">One Month</h1>
             <a href="#" class="sign-in">SIGN IN</a>
-            <h2 class="site-tagline">LEARN THE SKILLS YOU NEED TO ELEVATE YOUR CAREER IN JUST
+            <h2 class="site-tagline mp">LEARN THE SKILLS YOU NEED TO ELEVATE YOUR CAREER IN JUST
                 <strong>ONE MONTH</strong>.
             </h2>
         </section>
         <section id="courses" class="cf">
             <div id="course-rails" class="course col-md-4">
-                <h3 class="course-logo">One Month
+                <h3 class="course-logo cf mp">
+                    <span class="course-brand">One Month</span>
                     <span class="course-type">Rails</span>
                 </h3>
                 <p class="course-description">Build your first web app in just one month. Pants optional.</p>
                 <a href="#" class="course-btn">LEARN MORE</a>
             </div>
             <div id="course-html" class="course col-md-4">
-                <h3 class="course-logo">One Month
+                <h3 class="course-logo cf mp">
+                    <span class="course-brand">One Month</span>
                     <span class="course-type">HTML</span>
                 </h3>
                 <p class="course-description">Learn HTML & CSS in just one month. Build explosive websites.</p>
                 <a href="#" class="course-btn">LEARN MORE</a>
             </div>
             <div id="course-growth" class="course col-md-4">
-                <h3 class="course-logo">One Month
+                <h3 class="course-logo cf mp">
+                    <span class="course-brand">One Month</span>
                     <span class="course-type">Growth Hacking</span>
                 </h3>
                 <p class="course-description">Get your million-dolllar idea off the ground in just one month. Million-dollar budget not required.</p>
