replace css logos with image, remove max width on container, and create two res versions of the large background image

--- a/landing/index.html
+++ b/landing/index.html
@@ -23,26 +23,17 @@
         </section>
         <section id="courses" class="cf">
             <div id="course-rails" class="course col-md-4">
-                <h3 class="course-logo cf mp">
-                    <span class="course-brand">One Month</span>
-                    <span class="course-type">Rails</span>
-                </h3>
+                <h3 class="course-logo" id="logo-rails">One Month Rails</h3>
                 <p class="course-description">Build your first web app in just one month. Pants optional.</p>
                 <a href="#" class="course-btn">LEARN MORE</a>
             </div>
             <div id="course-html" class="course col-md-4">
-                <h3 class="course-logo cf mp">
-                    <span class="course-brand">One Month</span>
-                    <span class="course-type">HTML</span>
-                </h3>
+                <h3 class="course-logo" id="logo-html">One Month HTML</h3>
                 <p class="course-description">Learn HTML & CSS in just one month. Build explosive websites.</p>
                 <a href="#" class="course-btn">LEARN MORE</a>
             </div>
             <div id="course-growth" class="course col-md-4">
-                <h3 class="course-logo cf mp">
-                    <span class="course-brand">One Month</span>
-                    <span class="course-type">Growth Hacking</span>
-                </h3>
+                <h3 class="course-logo" id="logo-growth">One Month Growth Hacking</h3>
                 <p class="course-description">Get your million-dolllar idea off the ground in just one month. Million-dollar budget not required.</p>
                 <a href="#" class="course-btn">LEARN MORE</a>
             </div>
